--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,10 +3,8 @@ owner: TheRedNet # Your GitHub organization or username, where this repository l
 repo: upptime # The name of this repository
 
 sites:
-  - name: sgs Server
-    url: https://pmx01t.therednet.de
-  - name: Home Server
-    url: https://proxmox.therednet.de
+  - name: Uptime Kuma
+    url: https://kuma.therednet.de
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
